--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ nav.navbar.navbar-expand-lg {
   position: relative;
   gap: 20px;
   margin-top: 104px;
+  overflow: hidden;
 }
 .banner {
   background: url(../images/image.png);
@@ -189,13 +190,14 @@ nav.navbar.navbar-expand-lg {
 }
 .realEstate h3 {
   font-family: "Pacifico", serif;
-  font-size: 63px;
+  font-size: 60px;
   color: #ff5a3c;
   font-weight: normal;
   position: absolute;
   top: 12%;
   left: 0px;
-  transform: rotate(-40deg);
+  transform: rotate(-40deg)!important;
+  /* opacity: 1 !important; */
 }
 #bannerSlide{
   position: relative;
@@ -634,3 +636,27 @@ nav.navbar.navbar-expand-lg {
   font-size: 40px;
   color: #000;
 }
+/* Ensure .sliders remains constant */
+.sliders {
+  position: relative;
+  /* overflow: hidden; */
+}
+
+/* Initially hide elements and position them below their normal position */
+.bannerHeading,
+h1,
+p,
+.btnIcon,
+.real,
+.socialMediaIcons {
+  opacity: 0;
+  transform: translateY(50px); /* Move elements down */
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+/* Class to trigger animation */
+.animate {
+  opacity: 1;
+  transform: translateY(0); /* Move to original position */
+}
+
