--- a/css/style.css
+++ b/css/style.css
@@ -36,10 +36,12 @@ nav.navbar.navbar-expand-lg {
   width: 100%;
   z-index: 99999;
   background: #fff;
+  
 }
 /* Sticky Header Start */
 .sticky_header{
   background: #fff;
+  box-shadow: rgba(46, 56, 220, 0.2) 0px 10px 50px 0px;
   animation: alamin 1s;
   }
   @keyframes alamin{
@@ -91,7 +93,7 @@ nav.navbar.navbar-expand-lg {
   background-position: center;
   background-size: cover;
   padding-top: 245px;
-  padding-bottom: 180px;
+  padding-bottom: 155px;
   position: relative;
 }
 .bannerTwo{
@@ -100,7 +102,7 @@ nav.navbar.navbar-expand-lg {
   background-position: center;
   background-size: cover;
   padding-top: 245px;
-  padding-bottom: 180px;
+  padding-bottom: 155px;
   position: relative;
 }
 .bannerThree{
@@ -109,7 +111,7 @@ nav.navbar.navbar-expand-lg {
   background-position: center;
   background-size: cover;
   padding-top: 245px;
-  padding-bottom: 180px;
+  padding-bottom: 155px;
   position: relative;
 }
 .bannerFour{
@@ -118,7 +120,7 @@ nav.navbar.navbar-expand-lg {
   background-position: center;
   background-size: cover;
   padding-top: 245px;
-  padding-bottom: 180px;
+  padding-bottom: 155px;
   position: relative;
 }
 .bannerHeading h3 {
@@ -152,7 +154,7 @@ nav.navbar.navbar-expand-lg {
   font-family: "Nunito", serif;
   line-height: 30px;
   padding-top: 20px;
-  padding-bottom: 45px;
+  padding-bottom: 48px;
   width: 450px;
 }
 .bannerBtn:hover {
@@ -439,7 +441,7 @@ nav.navbar.navbar-expand-lg {
 }
 .slick-dots li {
   display: inline-block;
-  margin-right: 10px;
+  /* margin-right: 10px; */
 }
 .slick-dots li button {
   font-size: 0;
@@ -448,6 +450,7 @@ nav.navbar.navbar-expand-lg {
   width: 12px;
   border-radius: 50%;
   background: black;
+  margin-right: 8px;
 }
 .leftArrow{
   font-size: 30px;
@@ -488,7 +491,8 @@ nav.navbar.navbar-expand-lg {
   padding-top: 30px;
   line-height: 75px;
 }
-.golla{
+
+.gollaOne{
   padding: 20px;
   background: #FFF;
   border-radius: 50%;
@@ -496,14 +500,36 @@ nav.navbar.navbar-expand-lg {
   text-align: center;
   color: #ff5a3c;
   transition: .4s;
+  font-size: 25px;
+  z-index: 999;
+  position: absolute;
+  cursor: pointer;
+  top: -15%;
+  right: 8%;
 }
-.golla:hover{
+.gollaOne:hover{
   background: #ff5a3c;
   color: #fff;
 }
-.golla i{
+
+.gollaTwo{
+  padding: 20px;
+  background: #FFF;
+  border-radius: 50%;
+  width: 65px;
+  text-align: center;
+  color: #ff5a3c;
+  transition: .4s;
   font-size: 25px;
-  /* color: #ff5a3c; */
+  z-index: 999;
+  position: absolute;
+  cursor: pointer;
+  top: -15%;
+  right: 0%;
+}
+.gollaTwo:hover{
+  background: #ff5a3c;
+  color: #fff;
 }
 .gollaSpace{
   justify-content: space-between;
@@ -518,6 +544,33 @@ nav.navbar.navbar-expand-lg {
   background-color: #FFF;
   position: relative;
   box-shadow: 0 5px 20px 0 rgba(23, 44, 82, 0.1);
+}
+.projectSlideImg{
+  height: 483px;
+}
+.productServiceSlider{
+  position: relative;
+  gap: 20px;
+}
+.product_slide_dots{
+  width: 80px;
+  height: 68px;
+  border: 2px solid #fff;
+  margin-right: 5px;
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity 0.3s;
+  z-index: 999;
+}
+.productServiceSlider .slick-dots {
+  position: absolute;
+  bottom: 35px;
+  left: 10%;
+  display: flex !important;
+  gap: 10px;
+}
+.product_slide_dots.slick-active {
+  opacity: 1; /* Highlight active dot */
 }
 .slidesTwo{
   position: absolute;
@@ -558,6 +611,7 @@ nav.navbar.navbar-expand-lg {
   font-size: 17px;
   color: #0a2c3d;
   text-align: right;
+  margin-left: 9px;
 }
 .downloadBrochure{
   padding: 15px 20px;
@@ -568,8 +622,13 @@ nav.navbar.navbar-expand-lg {
   background: #ff5a3c;
   border-radius: 4px;
 }
-
-
+.brochureImg {
+  display: inline-block;
+  margin-left: 6px;
+}
+.slick-slide img {
+  display: inline-block;
+}
 
 #apartment{
   padding: 330px 0 110px 0;
@@ -649,7 +708,7 @@ nav.navbar.navbar-expand-lg {
 /* Initially hide elements and position them below their normal position */
 .bannerHeading,
 h1,
-.bannerTexts p,
+.bannerParagraph,
 .btnIcon,
 .real,
 .socialMediaIcons {
